add initial CV website files

--- a/index.html
+++ b/index.html
@@ -3,12 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>🔥 Krish's personal site</title>
+    <style media="screen">
+    body {
+      background-color:#beebe9;
+    }
+    hr {
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width:5px;
+      width:5%;
+    }
+    h1{
+       color:Blue;
+     }
+     h2{
+       color:Blue;
+     }
+     h3{
+       color:Blue;
+     }
+
+    </style>
+
   </head>
+
+
   <body>
     <table cellspacing="20">
       <tr>
         <td><img src="krish.jpg" alt="image" style="width:300px;height:300px;"></td>
-        <td><h1>krish munat</h1>
+        <td><h1>Krish Munat</h1>
         <p><em>founder and ceo of<strong><a href="https://www.appbrewery.co/">The app brewery</a> </strong>.</em></p>
         <p> I am a founder and ceo of the app brewery .I ❤ to play badminton </p></td>
       </tr>
