--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>contact me</title>
+    <style media="screen">
+    body {
+      background-color:#beebe9;
+    }
+    hr {
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width:5px;
+      width:5%;
+    }
+    h1{
+       color:Blue;
+     }
+     h2{
+       color:Blue;
+     }
+     h3{
+       color:Blue;
+     }
+
+
+    </style>
+
   </head>
   <body>
     <h2>my contact details</h2>
