--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>my hobbies</title>
+    <style>
+    body {
+      background-color:#beebe9;
+    }
+    hr {
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width:5px;
+      width:5%;
+    }
+    h1{
+       color:Blue;
+     }
+     h2{
+       color:Blue;
+     }
+     h3{
+       color:Blue;
+     }
+
+    </style>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3> My hobbies </h3>
